--- a/webapp/src/index.html
+++ b/webapp/src/index.html
@@ -21,6 +21,12 @@
 </head>
 <body>
 
+<header>
+    <a href="" class="logo">
+        <img src="images/logo.png" alt="Search Film Service">
+    </a>
+</header>
+
 <div ui-view></div>
 
 <!-- build:js(src) scripts/vendor.js -->
@@ -39,5 +45,7 @@
 <!-- endinject -->
 <!-- endbuild -->
 
+
+<script src="https://cdn.jsdelivr.net/lodash/4.17.4/lodash.min.js"></script>
 </body>
 </html>
