--- a/webapp/src/index.html
+++ b/webapp/src/index.html
@@ -24,6 +24,7 @@
 
     <script src="app/index.module.js"></script>
     <script src="app/search.factory.js"></script>
+    <script src="app/search.constant.js"></script>
     <script src="app/search/search.controller.js"></script>
     <script src="app/films/films.directive.js"></script>
 
